@@ -9,6 +9,7 @@
 - Added system cursors to GWT, fix 'Ibeam' system cursor not working on LWJGL3.
 - Added experimental AndroidApplicationConfiguration#useGL30 and IOSApplicationConfiguration#useGL30 for testing OpenGL ES 3.0 support on mobile devices, do not use in production.
 - Fix broken kerning for FreeType fonts, see https://github.com/libgdx/libgdx/pull/3756
+- API Addition: FreeTypeFontParameter has an additional field for tweaking hinting, see https://github.com/libgdx/libgdx/pull/3757
 
 [1.8.0]
 - API Change: Rewrote FreeType shadow rendering (much better).
